syntax = "proto3";

package sde;

message SdeRequest {
  oneof request_oneof {
    string write_text = 1;
    bytes write_bytes = 2;
  }
}

message SdeResponse { uint64 bytes = 1; }
