syntax = "proto2";

package event;

import "error.proto";
import "attachment.proto";

message OperationDone {
  required string uuid = 1;
  required string result = 2;
}

message Ticks {
  required uint64 count = 1;
  required string state = 2;
  required uint64 total = 3;
}

message Notification {
  required error.Severity severity = 1;
  required string content = 2;
  required uint64 line = 3;
}

message CallbackEvent {
  oneof event {
    uint64 stream_updated = 1;
    bool file_read = 2;
    SearchUpdated search_updated = 3;
    IndexedMapUpdated indexed_map_updated = 4;
    SearchMapUpdated search_map_updated = 5;
    SearchValuesUpdated search_values_updated = 6;
    AttachmentsUpdated attachments_updated = 7;
    Progress progress = 8;
    error.NativeError session_error = 9;
    OperationError operation_error = 10;
    string operation_started = 11;
    string operation_processing = 12;
    OperationDone operation_done = 13;
    bool session_destroyed = 14;
  }

  message SearchUpdated {
    required uint64 found = 1;
    map<string, uint64> stat = 2;
  }

  message IndexedMapUpdated { required uint64 len = 1; }

  message SearchMapUpdated { required string update = 1; }

  message SearchValuesUpdated {
    map<uint32, ValueRange> values = 1;

    message ValueRange {
      required double min = 1;
      required double max = 2;
    }
  }

  message AttachmentsUpdated {
    required uint64 len = 1;
    required attachment.AttachmentInfo attachment = 2;
  }

  message Progress {
    required string uuid = 1;
    required ProgressDetail detail = 2;

    message ProgressDetail {
      oneof detail {
        Ticks ticks = 1;
        Notification notification = 2;
        bool stopped = 3;
      }
    }
  }

  message OperationError {
    required string uuid = 1;
    required error.NativeError error = 2;
  }
}
